# foamprisma-plugin-openfoam

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/foamprisma_openfoam/: __init__.py
src/foamprisma_openfoam/actions/: __init__.py
src/foamprisma_openfoam/actions/check_mesh/: activities.py  models.py  workflows.py
src/foamprisma_openfoam/actions/custom_solver/: activities.py  models.py  workflows.py
src/foamprisma_openfoam/actions/generate_mesh/: activities.py  models.py  workflows.py
src/foamprisma_openfoam/actions/run_solver/: activities.py  models.py  workflows.py
src/foamprisma_openfoam/apps/: __init__.py
src/foamprisma_openfoam/normalizer/: __init__.py
src/foamprisma_openfoam/north_tools/: __init__.py
src/foamprisma_openfoam/parser/: __init__.py  openfoam_parser.py
src/foamprisma_openfoam/parser/adapters/: pyfoam_adapter.py
src/foamprisma_openfoam/schema/: __init__.py  boundary.py  case.py  mesh.py  quality.py  results.py  solver.py
tests/: test_adapter.py  test_normalizer.py  test_parser.py  test_schema.py
tests/data/cavity/: log.icoFoam
tests/data/cavity/constant/: transportProperties
tests/data/cavity/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
tests/integration/: test_full_pipeline.py
